<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TP1</string>
    <string name="title_activity_form">Form</string>
    <string name="title_activity_hello_world">HelloWorld</string>
    <string name="helloworld_activity">HelloWorld Activity</string>
    <string name="form_activity">Form Activity</string>
    <string name="hello_world">Hello World !</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="area_of_expertise">Area of Expertise</string>
    <string name="save">Save</string>
    <string name="phone_number">Phone Number</string>
    <string name="age">Age</string>
    <string name="title_activity_form_java">FormJava</string>
    <string name="form_java_activity">Form Java Activity</string>
    <string name="dialog_text">Confirm</string>
    <string name="dialog_message">Do you want to confirm this action ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_form_result">FormResult</string>
    <string name="first_name_result">First Name = </string>
    <string name="last_name_result">Last Name = </string>
    <string name="age_result">Age = </string>
    <string name="area_of_expertise_result">Area of Expertise = </string>
    <string name="phone_number_result">Phone Number = </string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="title_activity_phone">Phone</string>
    <string name="androidphone">androidPhone</string>
    <string name="textViewPhoneNumber2">TextView</string>
    <string name="call">Call</string>
    <string name="title_activity_train">Train</string>
    <string name="train_activity">Train Activity</string>
    <string name="show_schedules">Show schedules</string>
    <string name="end">End :</string>
    <string name="start">Start :</string>
    <string name="title_activity_train_result">TrainResult</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="write_an_event">Write an event</string>
    <string name="add_event">Add Event</string>
    <string name="calendar_activity">Calendar Activity</string>
</resources>