<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:text="@string/first_name_result" />

    <TextView
        android:id="@+id/textViewLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_name_result" />

    <TextView
        android:id="@+id/textViewAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age_result" />

    <TextView
        android:id="@+id/textViewExpertise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/area_of_expertise_result" />

    <TextView
        android:id="@+id/textViewPhoneNumber2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_number_result" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next" />
    </LinearLayout>
</LinearLayout>