<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="text"
        android:layout_marginTop="110dp"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="number"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextExpertise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/area_of_expertise"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="phone"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>