<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:contentDescription="@string/androidphone"
        android:src="@drawable/androidphone" />

    <TextView
        android:id="@+id/textViewPhoneNumber2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/textViewPhoneNumber2" />

    <Button
        android:id="@+id/buttonCall"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/call" />
</LinearLayout>